fixes the 'remove extra divider pipe on View Activity links -- (IE only)' punchlist item (not proud of this commit, ugly ruby here -- too much logic in the view)

--- a/public/stylesheets/v2/ie.css
+++ b/public/stylesheets/v2/ie.css
@@ -1,3 +1,3 @@
-/* just in case */
-/* top nav search box fix */
-button, input.button { position:relative;top:0; }
+ul.third-level-nav li.last {
+    border: 0 none;
+}
